# rag-pgvector

./: .env.dist  .gitignore  README.md  docker-compose.yml  pyproject.toml
db/: alembic.ini
db/migrations/: env.py
db/migrations/versions/: 17ebafc47f45_create_tables.py  3704eb78fbf9_disabled.py  cbe2146118ed_init.py
pgrag/models/: models.py
